# simple-kanban

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cfgwriter.c  client.c  config.h  file.h  server.c  tcpool.h
uploader/: .gitignore  push.sh  push_dmzj.sh
